# agents-config

./: .gitignore  Makefile  UPSTREAMS.md  upstreams.tsv
.codex-c/: config.toml
.pi/: settings.json
.pi-c/: settings.json
.pi-c/extensions/: command-approval-gate.ts
.pi/extensions/: ask-user-question.ts  memory-monitor.ts
pi-learning-mode/: README.md  package.json
pi-learning-mode/books/: fastapi-style-explanations.md  learning-state.md  teaching-rubric.md
pi-learning-mode/extensions/: learning-mode.ts
pi-learning-mode/prompts/: learn-bridge.md  learn-quiz.md  learn-revise.md  learn-session.md
scripts/: sync-upstreams.sh
skills/iatf/: SKILL.md  additional-commands.md  example-format.md
skills/tech-learner/: SKILL.md
standalone-experimental-workflow/: README.md
test/: .gitignore  AGENTS.md  PROCESS.md  README.md  agent-api  go.mod  pyproject.toml
test/.github/: pull_request_template.md
test/agent_api/: __init__.py  cli.py  config.py  errors.py  http_client.py  openapi.py  policy.py  session.py
test/cmd/agent-api/: main.go
test/docs/: CODE_REVIEW_CHECKLIST.md  SEQUENTIAL_THINKING_TEMPLATE.md  TEST_PLAN_TEMPLATE.md
test/internal/agentapi/: cli.go  cli_test.go  config.go  config_test.go  errors.go  http_client.go  http_client_test.go  openapi.go  openapi_test.go  policy.go  policy_test.go  runtime.go  runtime_test.go  session.go
test/tests/: test_config.py  test_http_client.py  test_openapi.py  test_policy.py  test_runtime_context.py
test2/: .gitignore  api  config.example.toml  curl
test3/: .gitignore  README.md  config.example.toml
(+53 files in other folders)
