[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "agent-api"
version = "0.1.0"
description = "Policy-enforced API gateway CLI for coding agents"
requires-python = ">=3.11"
dependencies = []

[project.optional-dependencies]
dev = ["pytest>=8.0"]

[project.scripts]
agent-api = "agent_api.cli:main"

[tool.pytest.ini_options]
testpaths = ["tests"]
